# discord-api-scheduler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/scheduler_api/: config.py  database.py  dispatcher.py  main.py  models.py  reminder_store.py  scheduler.py
tests/: test_endpoints.py
